--- a/menu1/sass/style1.scss
+++ b/menu1/sass/style1.scss
@@ -11,15 +11,16 @@ body {
     justify-content: space-around;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: -3em;
   }
 .back{
     width: 15px;
     height: 15px;
-    margin-top: 0.5em;  
+    margin-top: 0.5em; 
+    margin-left: 1.5em; 
 }
 .logo-img {
-   margin-left: -5em;
+    display: block;
+    margin: auto;
 } 
 .menilmontant-img{
     width: 102.2%;
@@ -43,8 +44,8 @@ section{
     justify-content: space-around;
 }
 .heart{
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     margin-top: 1.7em;
 }
 .title{
@@ -62,7 +63,7 @@ section{
         display: flex;
         width: 90%;
     &:hover .check {
-      width: 25%;
+        width: 25%;
       > .check-circle {
         width: 20px;
         height: 20px;
@@ -97,6 +98,7 @@ section{
                 font-size: 0.9em;
             }
             &:nth-child(3) {
+                overflow:visible;
                 grid-area: price;
                 display: flex;
                 justify-content: flex-end;
@@ -251,4 +253,101 @@ footer {
   .partner {
     margin-top: 2em;
   }
+@media only screen and (min-width: 550px) and (max-width: 1400px) {
+    .menilmontant-img{
+        width: 100.8%;
+    }
+        
+    .main-title{
+        display: unset;
+    }   
+    .back{
+        width: 25px;
+        height: 25px;
+    }
+    .title{
+        font-size: 2em;
+        text-align: center;
+    }
+    .heart{
+        display: block;
+        margin: auto;
+        width: 30px;
+        height: 30px;  
+    }
+    .starter, .dishes, .desert {
+        .starter-card1, .starter-card2, .starter-card3, .dish-card1, .dish-card2, .dish-card3, .desert-card1, .desert-card2, .desert-card3  {
+          &:hover .check {
+              width: 10%;
+            }
+        }
+    }    
+    .order {
+        position: relative;
+        left: 45%;
+        bottom: -4em;
+    }
+}
+
+@media only screen and (min-width: 550px) and (max-width: 1000px) {
+    .starter, .dishes, .desert {
+        margin-left: 1.5em;
+    }
+    
+    .ustensils-p, .partner-p, .legal, .contact-link {
+        align-items: center;
+    }
+    .ustensils, .partner {
+        left: 35%;
+    }
+    footer{
+        margin-top: 80em;
+    }
+}
+@media only screen and (min-width: 1001px) and (max-width: 1400px) {
+    .starter-title, .dishes-title, .desert-title {
+        font-size: 2em;
+        margin-left: 0.5em;
+    }
+    .starter-title, .desert-title{
+        padding-right: 25em;
+    }
+       
+    .dishes-title{
+        padding-right: 27em;  
+    }
+    .starter, .dishes, .desert {
+        .starter-card1, .starter-card2, .starter-card3, .dish-card1, .dish-card2, .dish-card3, .desert-card1, .desert-card2, .desert-card3  {
+              width: 30%;
+          &:hover .check {
+            width: 25%;
+          }
+        }
+    }  
+    .starter, .dishes, .desert {
+        display: flex;
+        flex-direction: row;
+        align-items:baseline;
+        flex-wrap: wrap;
+    }
+    footer{
+        margin-top: 60em;
+        padding-bottom: 4em;
+    }
+    footer .title {
+        font-size: 2em;
+    }
+    .ustensils-p, .partner-p, .legal, .contact-link {
+        align-items: center;
+        font-size: 1em;
+    }
+    .ustensils, .partner {
+        width: 20px;
+        height: 20px;
+        left: 40%;
+    }
+    .partner {
+        margin-top: 2em;
+    }
+}
 
