--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,11 +7,6 @@ $backgroundhover: #f5edff;
 .body{
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
-  font-style: italic;
-  font-size: 20px;
-  color: #fff;
-  text-align: center;
 }
 .section{
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
@@ -27,12 +22,23 @@ $backgroundhover: #f5edff;
   0%{ opacity: 1;}
   100%{ opacity: 0;}
 }
+.loader-quart p{
+  position: relative;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+  width: 300px;
+  margin-left: -6em;
+  margin-top: -6em;
+}
 .loader{
   width: 50px;
   height: 50px;
   position:absolute;
   left: 50%;
-  top: 50%;
+  top: 30%;
   margin-left: -25px; /* Cette valeur doit être la moitié négative de la valeur du width */
   margin-top: -100px;
 }
@@ -106,7 +112,8 @@ $backgroundhover: #f5edff;
     background-color: $backgroundinput;
     border: none;
     font-size: 0.95em;
-    color: black;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
     padding: 10px 0px 10px 130px;
     width: 102.5%;
     margin-top: 1em;
@@ -125,7 +132,7 @@ $backgroundhover: #f5edff;
   .purpose {
     background-color: $backgroundmain;
     padding-top: 2em;
-    padding-bottom: 5em;
+    padding-bottom: 3em;
     width: 102.2%;
   }
   
@@ -138,20 +145,27 @@ $backgroundhover: #f5edff;
     text-align: center;
     font-weight: 100;
     font-size: 0.95em;
+    margin-bottom: 3em;
   }
   
   .explore {
+    font-family: "Roboto", sans-serif;
+    position: relative;
     display: block;
-    margin:auto;
-    margin-top: 3em;
+    margin: auto;
     border-radius: 3em;
+    text-decoration-line: none; 
     font-size: 0.75em;
     color: white;
-    padding: 10px 15px 10px 15px;
+    padding: 1em 1em 1em 2em;
+    width: 150px;
     background: linear-gradient(to bottom right, #FF79DA, #9356DC);
     border: none;
   }
-  
+  .explore:hover{
+    background: linear-gradient(to bottom right, #FF79DA44, #9356DC44);
+    box-shadow: 0px 2px 5px grey;
+  }
   nav h2, section h2 {
     font-size: 1.3em;
     margin-left: 1em;
@@ -182,7 +196,8 @@ $backgroundhover: #f5edff;
   .select-p, .compose-p, .store-p {
     background-color: $backgroundmain;
     border: none;
-    color: black;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
     font-size: 0.8em;
     padding: 20px 0px 20px 70px;
     border-radius: 1.5em;
@@ -191,6 +206,7 @@ $backgroundhover: #f5edff;
   }
   .select-p:hover, .compose-p:hover, .store-p:hover {
     background: $backgroundhover;
+    box-shadow: 0px 2px 5px grey;
   }
   .select-p:hover + .select-img2, .compose-p:hover + .compose-img2, .store-p:hover + .store-img2 {
     opacity: 1;
@@ -258,10 +274,15 @@ $backgroundhover: #f5edff;
   
   .menilmontant-new, .charonne-new{
     position: absolute;
+    background-color:#99E2D0;
+    color: rgba(1 135 102);
+    font-size: 0.75em;
+    text-align: center;
     right: 10%;
-    width: 60px;
-    height: 30px;
+    width: 70px;
+    height: 20px;
     margin-top: 0.5em;
+    padding-top: 0.25em;
   }
   
   .menilmontant-heart, .charonne-heart, .cite-rouge-heart, .folie-mericourt-heart {
@@ -327,19 +348,23 @@ $backgroundhover: #f5edff;
   }
   
 
-  @media only screen and (min-width : 550px) and (max-width : 1400px)
+  @media only screen and (min-width : 550px)
 {  
+  .map{
+    margin-right: 2em;
+    margin-top: 1em;
+  }
   .input {
     background-color: $backgroundhover;
     border-radius: 3em;
-    width: 40%;
-    padding-left: 10%;
-    margin-left: -60%;
+    width: 50%;
+    margin: auto;
+    padding-left: 18%;
   }
   .icon {
     position: relative;
-    left: -55%;
-    margin-top: 1em;
+    left: 35%;
+    margin-top: 0em;
   }
   .purpose {
     margin-top: 2em;
@@ -351,18 +376,20 @@ $backgroundhover: #f5edff;
     flex-wrap: wrap;
     width: 50%;
   }
-  footer{
-    width: 100.6%;
-  }
   section {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
     width: 100.6%;
   }
   section h2{
     margin-top: -1em;
+  }
+
+  footer{
+    width: 100.6%;
   }
 }
 @media only screen and (min-width : 550px) and (max-width : 1000px)
@@ -407,9 +434,9 @@ $backgroundhover: #f5edff;
     margin-top: 0.5em;
   }
   .menilmontant-place {
-    left: 2%;
-    bottom: 32.5%;
-    top: 60.5%;
+    position: relative;
+    left: -26%;
+    top: -116%;
   }
   .cite-rouge-place{
     position: relative;
@@ -428,12 +455,12 @@ $backgroundhover: #f5edff;
   }
   .menilmontant-heart{
     position: relative;
-    top: -15em;
+    top: -32em;
     margin-left: 95%;
   }
   .menilmontant-heart2{
     position: relative;
-    top: -29.45em;
+    top: -46.45em;
     margin-left: 95%;
   }
   .cite-rouge-heart, .folie-mericourt-heart{
@@ -467,8 +494,14 @@ $backgroundhover: #f5edff;
       left: 35%;
   }
 }
-@media only screen and (min-width : 1001px) and (max-width : 1400px)
+@media only screen and (min-width : 1001px)
 {  
+  .input {
+    padding-left: 21%;
+  }
+  .icon {
+    left: 42%;
+  }
   .menilmontant, .charonne, .cite-rouge, .folie-mericourt{
     width: 400px;
     height: 200px;
@@ -487,8 +520,9 @@ $backgroundhover: #f5edff;
     left: -32%;
   }
   .menilmontant-place {
-    left: 1.5%;
-    top: 48.5%;
+    position: relative;
+    left: -37%;
+    top: -116%;
   }
   .charonne-title{
     position: relative;
@@ -528,7 +562,7 @@ $backgroundhover: #f5edff;
   }
   .menilmontant-heart{
     position: relative;
-    top: -15em;
+    top: -32em;
     margin-left: 105%;
   }
   .charonne-heart{
@@ -543,7 +577,7 @@ $backgroundhover: #f5edff;
   }
   .menilmontant-heart2{
     position: relative;
-    top: -29.45em;
+    top: -46.45em;
     margin-left: 105%;
   }
   .charonne-heart2
