--- a/style.css
+++ b/style.css
@@ -3,11 +3,6 @@
 .body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
-  font-style: italic;
-  font-size: 20px;
-  color: #fff;
-  text-align: center;
 }
 
 .section {
@@ -29,12 +24,24 @@
     opacity: 0;
   }
 }
+.loader-quart p {
+  position: relative;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+  width: 300px;
+  margin-left: -6em;
+  margin-top: -6em;
+}
+
 .loader {
   width: 50px;
   height: 50px;
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 30%;
   margin-left: -25px;
   /* Cette valeur doit être la moitié négative de la valeur du width */
   margin-top: -100px;
@@ -128,7 +135,8 @@ body {
   background-color: #eaeaea;
   border: none;
   font-size: 0.95em;
-  color: black;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
   padding: 10px 0px 10px 130px;
   width: 102.5%;
   margin-top: 1em;
@@ -147,7 +155,7 @@ body {
 .purpose {
   background-color: #f6f6f6;
   padding-top: 2em;
-  padding-bottom: 5em;
+  padding-bottom: 3em;
   width: 102.2%;
 }
 
@@ -160,18 +168,27 @@ body {
   text-align: center;
   font-weight: 100;
   font-size: 0.95em;
+  margin-bottom: 3em;
 }
 
 .explore {
+  font-family: "Roboto", sans-serif;
+  position: relative;
   display: block;
   margin: auto;
-  margin-top: 3em;
   border-radius: 3em;
+  text-decoration-line: none;
   font-size: 0.75em;
   color: white;
-  padding: 10px 15px 10px 15px;
+  padding: 1em 1em 1em 2em;
+  width: 150px;
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
   border: none;
+}
+
+.explore:hover {
+  background: linear-gradient(to bottom right, #FF79DA44, #9356DC44);
+  box-shadow: 0px 2px 5px grey;
 }
 
 nav h2, section h2 {
@@ -205,7 +222,8 @@ nav h2, section h2 {
 .select-p, .compose-p, .store-p {
   background-color: #f6f6f6;
   border: none;
-  color: black;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
   font-size: 0.8em;
   padding: 20px 0px 20px 70px;
   border-radius: 1.5em;
@@ -215,6 +233,7 @@ nav h2, section h2 {
 
 .select-p:hover, .compose-p:hover, .store-p:hover {
   background: #f5edff;
+  box-shadow: 0px 2px 5px grey;
 }
 
 .select-p:hover + .select-img2, .compose-p:hover + .compose-img2, .store-p:hover + .store-img2 {
@@ -284,10 +303,15 @@ section {
 
 .menilmontant-new, .charonne-new {
   position: absolute;
+  background-color: #99E2D0;
+  color: #018766;
+  font-size: 0.75em;
+  text-align: center;
   right: 10%;
-  width: 60px;
-  height: 30px;
+  width: 70px;
+  height: 20px;
   margin-top: 0.5em;
+  padding-top: 0.25em;
 }
 
 .menilmontant-heart, .charonne-heart, .cite-rouge-heart, .folie-mericourt-heart {
@@ -353,19 +377,24 @@ footer .title {
   margin-top: 2em;
 }
 
-@media only screen and (min-width: 550px) and (max-width: 1400px) {
+@media only screen and (min-width: 550px) {
+  .map {
+    margin-right: 2em;
+    margin-top: 1em;
+  }
+
   .input {
     background-color: #f5edff;
     border-radius: 3em;
-    width: 40%;
-    padding-left: 10%;
-    margin-left: -60%;
+    width: 50%;
+    margin: auto;
+    padding-left: 18%;
   }
 
   .icon {
     position: relative;
-    left: -55%;
-    margin-top: 1em;
+    left: 35%;
+    margin-top: 0em;
   }
 
   .purpose {
@@ -380,20 +409,21 @@ footer .title {
     width: 50%;
   }
 
-  footer {
-    width: 100.6%;
-  }
-
   section {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
     width: 100.6%;
   }
 
   section h2 {
     margin-top: -1em;
+  }
+
+  footer {
+    width: 100.6%;
   }
 }
 @media only screen and (min-width: 550px) and (max-width: 1000px) {
@@ -443,9 +473,9 @@ footer .title {
   }
 
   .menilmontant-place {
-    left: 2%;
-    bottom: 32.5%;
-    top: 60.5%;
+    position: relative;
+    left: -26%;
+    top: -116%;
   }
 
   .cite-rouge-place {
@@ -468,13 +498,13 @@ footer .title {
 
   .menilmontant-heart {
     position: relative;
-    top: -15em;
+    top: -32em;
     margin-left: 95%;
   }
 
   .menilmontant-heart2 {
     position: relative;
-    top: -29.45em;
+    top: -46.45em;
     margin-left: 95%;
   }
 
@@ -514,7 +544,15 @@ footer .title {
     left: 35%;
   }
 }
-@media only screen and (min-width: 1001px) and (max-width: 1400px) {
+@media only screen and (min-width: 1001px) {
+  .input {
+    padding-left: 21%;
+  }
+
+  .icon {
+    left: 42%;
+  }
+
   .menilmontant, .charonne, .cite-rouge, .folie-mericourt {
     width: 400px;
     height: 200px;
@@ -537,8 +575,9 @@ footer .title {
   }
 
   .menilmontant-place {
-    left: 1.5%;
-    top: 48.5%;
+    position: relative;
+    left: -37%;
+    top: -116%;
   }
 
   .charonne-title {
@@ -585,7 +624,7 @@ footer .title {
 
   .menilmontant-heart {
     position: relative;
-    top: -15em;
+    top: -32em;
     margin-left: 105%;
   }
 
@@ -603,7 +642,7 @@ footer .title {
 
   .menilmontant-heart2 {
     position: relative;
-    top: -29.45em;
+    top: -46.45em;
     margin-left: 105%;
   }
 
